# Django-Boilerplate

./: .flake8  .gitignore  Makefile  README.rst  docker-compose.yml  pyproject.toml
django_boilerplate/: manage.py
django_boilerplate/core/utils/: misc.py
django_boilerplate/project/: asgi.py  urls.py  wsgi.py
django_boilerplate/project/settings/: __init__.py  base.py  envvars.py  logging.py
