[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["bucky <buckyroberts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
django-filter = "^22.1"
django-split-settings = "^1.2.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
